--- a/index.html
+++ b/index.html
@@ -860,7 +860,6 @@
             font-size: 16px;
             font-weight: 600;
         }
-        .dashboard-hero-note {
             font-size: 9px;
             color: var(--gray);
             margin-top: 2px;
@@ -1500,6 +1499,7 @@
                 <div class="dashboard-hero-metric">
                     <div class="dashboard-hero-label">Ціна ARUB</div>
                     <div class="dashboard-hero-value">$<span id="arubPriceValue">—</span></div>
+                    <div class="dashboard-hero-note" id="arubPriceSource">Джерело курсу: —</div>
                 </div>
                 <div class="dashboard-hero-metric">
                     <div class="dashboard-hero-label">Кількість стейкерів</div>
@@ -1512,7 +1512,6 @@
                 <div class="dashboard-hero-metric">
                     <div class="dashboard-hero-label">Поточний рівень</div>
                     <div class="dashboard-hero-value" id="dashHeroTier">—</div>
-                    <div class="dashboard-hero-note">Розрахунок від TVL в USD</div>
                 </div>
             </div>
         </div>
